--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 </head>
 <body>
   <main class="main">
-    <p>How did we do?</p>
-    <p>Please let us know how we did with your support request. All feedback is appreciated 
+    <div class="star">
+      <img src="images/icon-star.svg">
+    </div>
+    <h1 class="title">How did we do?</h1>
+    <p class="text">Please let us know how we did with your support request. All feedback is appreciated 
       to help us improve our offering!</p>
     <div class="rates-container">
       <div class="rate-number" id="num1">1</div>
@@ -21,6 +24,10 @@
       <div class="rate-number" id="num4">4</div>
       <div class="rate-number" id="num5">5</div>
     </div>
+    <div class="btn-container">
+      <button>submit</button>
+    </div>
+    
   </main>
   <!-- Rating state start -->
 
