--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="rate-number" id="num2">2</div>
       <div class="rate-number" id="num3">3</div>
       <div class="rate-number" id="num4">4</div>
-      <div class="rate-number" id="num5">5</div>
+      <div class="rate-number" id="num5" onClick="select()">5</div>
     </div>
     <div class="btn-container">
       <button>submit</button>
@@ -54,6 +54,6 @@
   <!-- Thank you state end -->
 
   
-
+<script src="app.js"></script>
 </body>
 </html>
