--- a/index.html
+++ b/index.html
@@ -10,50 +10,40 @@
  
 </head>
 <body>
-  <main class="main">
-    <div class="star">
-      <img src="images/icon-star.svg">
+  <main>
+    <div class="main" id="main">
+      <div class="star">
+        <img src="images/icon-star.svg">
+      </div>
+      <h1 class="title">How did we do?</h1>
+      <p class="text">Please let us know how we did with your support request. All feedback is appreciated 
+        to help us improve our offering!</p>
+      <div class="rates-container">
+        <div class="rate-number" id="num1">1</div>
+        <div class="rate-number" id="num2">2</div>
+        <div class="rate-number" id="num3">3</div>
+        <div class="rate-number" id="num4">4</div>
+        <div class="rate-number" id="num5" onClick="select()">5</div>
+      </div>
+      <div class="btn-container">
+        <button id="btn" onClick="submit()">submit</button>
+      </div>
     </div>
-    <h1 class="title">How did we do?</h1>
-    <p class="text">Please let us know how we did with your support request. All feedback is appreciated 
-      to help us improve our offering!</p>
-    <div class="rates-container">
-      <div class="rate-number" id="num1">1</div>
-      <div class="rate-number" id="num2">2</div>
-      <div class="rate-number" id="num3">3</div>
-      <div class="rate-number" id="num4">4</div>
-      <div class="rate-number" id="num5" onClick="select()">5</div>
-    </div>
-    <div class="btn-container">
-      <button>submit</button>
+    
+    <div class="thank-you submit" id="thank-you">
+      <img class="img-thank-you" src="./images/illustration-thank-you.svg">
+      <div class="score">
+        You selected 4 out of 5
+      </div>
+      <h1 class="title">Thank you!</h1>
+      <p class="text-ty">
+        We appreciate you taking the time to give a rating. If you ever need more support, 
+        don’t hesitate to get in touch!
+      </p>
     </div>
     
   </main>
-  <!-- Rating state start -->
-
-  <!-- How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit -->
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  <!--  You selected Add rating here  out of 5 -->
-
-  <!-- Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch! -->
-
-  <!-- Thank you state end -->
-
-  
+ 
 <script src="app.js"></script>
 </body>
 </html>
