trying to add class selected to clicked number

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
       <p class="text">Please let us know how we did with your support request. All feedback is appreciated 
         to help us improve our offering!</p>
       <div class="rates-container">
-        <div class="rate-number" id="num1">1</div>
-        <div class="rate-number" id="num2">2</div>
-        <div class="rate-number" id="num3">3</div>
-        <div class="rate-number" id="num4">4</div>
-        <div class="rate-number" id="num5" onClick="select()">5</div>
+        <div class="rate-number" id="num">1</div>
+        <div class="rate-number" id="num">2</div>
+        <div class="rate-number" id="num">3</div>
+        <div class="rate-number" id="num">4</div>
+        <div class="rate-number" id="num">5</div>
       </div>
       <div class="btn-container">
         <button id="btn" onClick="submit()">submit</button>
       </div>
     </div>
     
-    <div class="thank-you submit" id="thank-you">
+    <div class="thank-you hide" id="thank-you">
       <img class="img-thank-you" src="./images/illustration-thank-you.svg">
       <div class="score">
         You selected 4 out of 5
