--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="rates-container">
         <div class="rate-number" id="num">1</div>
         <div class="rate-number" id="num">2</div>
-        <div class="rate-number" id="num">3</div>
+        <div class="rate-number selected" id="num">3</div>
         <div class="rate-number" id="num">4</div>
         <div class="rate-number" id="num">5</div>
       </div>
@@ -33,7 +33,7 @@
     <div class="thank-you hide" id="thank-you">
       <img class="img-thank-you" src="./images/illustration-thank-you.svg">
       <div class="score">
-        You selected 4 out of 5
+        You selected <span class="rate">4</span> out of 5
       </div>
       <h1 class="title">Thank you!</h1>
       <p class="text-ty">
