--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="thank-you hide" id="thank-you">
       <img class="img-thank-you" src="./images/illustration-thank-you.svg">
       <div class="score">
-        You selected <span class="rate">4</span> out of 5
+        You selected <span class="rate"></span> out of 5
       </div>
       <h1 class="title">Thank you!</h1>
       <p class="text-ty">
